# Sync

./: .gitignore  CMakeLists.txt  config.yaml
src/: main.cpp
